# secure-mcp-workflow-orchestrator

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
apps/api/app/: main.py  schemas.py
apps/api/app/cache/: redis_client.py
apps/api/app/db/: models.py  session.py
apps/api/app/events/: bus.py
apps/api/app/routes/: runs.py  webhooks.py  workflows.py
apps/worker/app/: executor.py  main.py
apps/worker/app/events/: consumer.py
shared/shared/schemas/: workflow.py
tests/: conftest.py
tests/integration/: test_workflow.py
